ajustement frontend ok

--- a/symfony-project/templates/company/fiche-poste.html.twig
+++ b/symfony-project/templates/company/fiche-poste.html.twig
@@ -54,10 +54,10 @@
 								<a href="#" class="text-black font-weight-bold">Mon compte</a>
 								<ul class="dropdown">
 									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Connexion</a>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
 									</li>
 									<li>
-										<a class="text-black" style="cursor:pointer;" href="#">Inscription</a>
+										<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
 									</li>
 								</ul>
 							</li>
