--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -79,11 +79,16 @@
 							<li>
 								<a class="text-black" href="">Favoris</a>
 							</li>
-							<li>
-								<a class="text-black" href="">
-									<span class="fa fa-user"></span>
-									Mon compte
-								</a>
+							<li class="has-children">
+								<a href="#" class="text-black">Mon compte</a>
+								<ul class="dropdown">
+									<li>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
+									</li>
+									<li>
+										<a class="text-black" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
+									</li>
+								</ul>
 							</li>
 						</ul>
 
@@ -106,7 +111,7 @@
 					class="row">
 					<!-- Offre 1 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Chef de projet SI</h5>
@@ -121,7 +126,7 @@
 					</div>
 					<!-- Offre 2 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Software Developer</h5>
@@ -136,7 +141,7 @@
 					</div>
 					<!-- Offre 3 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
@@ -155,7 +160,7 @@
 					class="row">
 					<!-- Offre 1 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Chef de projet SI</h5>
@@ -170,7 +175,7 @@
 					</div>
 					<!-- Offre 2 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Software Developer</h5>
@@ -185,7 +190,7 @@
 					</div>
 					<!-- Offre 3 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
@@ -204,7 +209,7 @@
 					class="row">
 					<!-- Offre 1 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Chef de projet SI</h5>
@@ -219,7 +224,7 @@
 					</div>
 					<!-- Offre 2 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Software Developer</h5>
@@ -234,7 +239,7 @@
 					</div>
 					<!-- Offre 3 -->
 					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="card shadow-sm">
+						<div class="card shadow-sm p-3">
 							<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 							<div class="card-body">
 								<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
