--- a/symfony-project/templates/profil/index.html.twig
+++ b/symfony-project/templates/profil/index.html.twig
@@ -84,10 +84,10 @@
 								<a href="#" class="text-black">Mon compte</a>
 								<ul class="dropdown">
 									<li>
-										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('inscription-company')}}">Connexion</a>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
 									</li>
 									<li>
-										<a class="text-black text-bold" style="cursor:pointer;" href="#">Inscription</a>
+										<a class="text-black text-bold" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
 									</li>
 								</ul>
 							</li>
