page d'accueil adopteundev ✅

--- a/symfony-project/templates/user/index.html.twig
+++ b/symfony-project/templates/user/index.html.twig
@@ -34,6 +34,8 @@
             <label for="bio">Courte biographie</label>
             <textarea id="bio" name="bio" class="form-control" rows="3"></textarea>
         </div>
+
+         <input type="file" name="profilePicture" />
         <button type="submit" class="btn btn-primary btn-block">S'inscrire</button>
     </form>
 </div>
