--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -136,7 +136,7 @@
 						class="row">
 						<!-- Offre 1 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
 									<h5 class="card-title">Chef de projet SI</h5>
@@ -151,7 +151,7 @@
 						</div>
 						<!-- Offre 2 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
 									<h5 class="card-title">Software Developer</h5>
@@ -166,10 +166,10 @@
 						</div>
 						<!-- Offre 3 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
-									<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
+									<h5 class="card-title">Stage Développeur</h5>
 									<p class="card-text">
 										Stage de 4 à 6 mois
 										<br>
@@ -199,7 +199,7 @@
 						class="row">
 						<!-- Offre 1 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
 									<h5 class="card-title">Chef de projet SI</h5>
@@ -214,7 +214,7 @@
 						</div>
 						<!-- Offre 2 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
 									<h5 class="card-title">Software Developer</h5>
@@ -229,10 +229,10 @@
 						</div>
 						<!-- Offre 3 -->
 						<div class="col-md-6 col-lg-4 mb-4">
-							<div class="card shadow-sm">
+							<div class="card shadow-sm p-3">
 								<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
 								<div class="card-body">
-									<h5 class="card-title">Stage - Études stratégiques renouvelables</h5>
+									<h5 class="card-title">Stage Développeur</h5>
 									<p class="card-text">
 										Stage de 4 à 6 mois
 										<br>
