--- a/symfony-project/templates/home/index.html.twig
+++ b/symfony-project/templates/home/index.html.twig
@@ -1,20 +1,402 @@
-{% extends 'base.html.twig' %}
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Untree.co">
+		<link rel="shortcut icon" href="favicon.png">
 
-{% block title %}Hello HomeController!{% endblock %}
+		<meta name="description" content=""/>
+		<meta name="keywords" content="bootstrap, bootstrap4"/>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/symfony-project/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/var/www/symfony-project/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
-{% endblock %}
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="fonts/icomoon/style.css">
+		<link rel="stylesheet" href="fonts/feather/style.css">
+		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
+		<link rel="stylesheet" href="css/aos.css">
+		<link rel="stylesheet" href="css/style.css">
+
+		<title>AdopteUnDev</title>
+	</head>
+	<body>
+
+
+		<div class="site-mobile-menu site-navbar-target">
+			<div class="site-mobile-menu-header">
+				<div class="site-mobile-menu-close">
+					<span class="icofont-close js-menu-toggle"></span>
+				</div>
+			</div>
+			<div class="site-mobile-menu-body"></div>
+		</div>
+
+		<div class="container">
+
+
+			<nav class="site-nav">
+				<div class="logo">
+					<a href="index.html" class="text-white">AdopteUnDev<span class="text-black">.</span>
+					</a>
+				</div>
+				<div class="row align-items-center">
+
+
+					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
+						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
+							<li class="active">
+								<a class="font-weight-bold " href="{{path('app_developer')}}">Développeurs</a>
+							</li>
+							<li class="active">
+								<a class="font-weight-bold " href="{{path('app_company')}}">Entreprises</a>
+							</li>
+						</ul>
+
+
+						<a href="#" class="burger light ml-auto site-menu-toggle js-menu-toggle d-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
+							<span></span>
+						</a>
+
+					</div>
+
+				</div>
+			</nav>
+
+		</div>
+
+
+		<div class="hero-slant overlay" data-stellar-background-ratio="0.5" style="background-image: url('https://img.freepik.com/free-photo/modern-equipped-computer-lab_23-2149241223.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid')">
+
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-lg-7 intro">
+						<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">Rencontrez vos futurs collaborateurs</h1>
+						<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous connectons entreprises et développeurs pour un avenir innovant.</p>
+					</div>
+
+
+				</div>
+
+
+			</div>
+
+			<div class="slant" style="background-image: url('images/slant.svg');"></div>
+		</div>
+
+		<div class="py-3">
+			<div class="container">
+
+				<div class="owl-logos owl-carousel">
+					<div class="item">
+						<img src="images/logo-puma.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="images/logo-google.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="images/logo-paypal.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
+					</div>
+					<div class="item">
+						<img src="images/logo-google.png" alt="Image" class="img-fluid">
+					</div>
+
+
+				</div>
+
+
+			</div>
+
+		</div>
+
+		<div class="site-section overlay site-cover-2" style="background-image: url('images/img_v_3-min.jpg')">
+			<div class="container">
+				<div class="row"></div>
+			</div>
+		</div>
+
+
+		<div class="features-lg ">
+			<div class="container">
+				<div class="row feature align-items-center justify-content-between">
+					<div class="col-lg-7 section-stack order-lg-2 mb-4 mb-lg-0 position-relative" data-aos="fade-up" data-aos-delay="0">
+						<img style="border-radius:1rem;" src="https://img.freepik.com/free-photo/landmarks-modern-city_1359-338.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid" alt="">
+					</div>
+					<div class="col-lg-4 section-title" data-aos="fade-up" data-aos-delay="100">
+
+						<h2 class="font-weight-bold mb-4 heading">Faîtes de votre talent une opportunité</h2>
+						<p class="mb-4">Matchez avec une entreprise à vos goûts et valeurs.</p>
+						<p>
+							<a href="{{path('app_company')}}" class="btn btn-primary">Développeurs</a>
+						</p>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="features-lg">
+			<div class="container">
+
+				<div class="row feature align-items-center justify-content-between">
+					<div class="col-lg-7 mb-4 mb-lg-0 section-stack" data-aos="fade-up" data-aos-delay="0">
+						<img style="border-radius:1rem;" src="https://img.freepik.com/free-photo/person-front-computer-working-html_23-2150038835.jpg?ga=GA1.1.73765508.1719503126&semt=ais_hybrid" alt="Image" class="img-fluid">
+					</div>
+					<div class="col-lg-4 section-title" data-aos="fade-up" data-aos-delay="100">
+
+						<h2 class="font-weight-bold mb-4">Vos collaborateurs en un clique</h2>
+						<p class="mb-4">Découvrez vos futurs Devs</p>
+						<p>
+							<a href="{{path('app_developer')}}" class="btn btn-primary">Développeurs</a>
+						</p>
+
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+
+		<div class="testimonial-section">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-lg-4 mb-5 section-title" data-aos="fade-up" data-aos-delay="0">
+						<h2 class="mb-4 font-weight-bold heading">Témoignages</h2>
+					</div>
+					<div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
+
+						<div class="testimonial--wrap">
+							<div class="owl-single owl-carousel no-dots no-nav">
+								<div class="testimonial-item">
+									<div class="d-flex align-items-center mb-4">
+										<div class="photo mr-3">
+											<img src="images/person_4-min.jpg" alt="Image" class="img-fluid">
+										</div>
+										<div class="author">
+											<cite class="d-block mb-0">Kaila Woodland</cite>
+											<span>Owner, Greenland, Inc.</span>
+										</div>
+									</div>
+									<blockquote>
+										<p>&ldquo;Nos collaborateurs rencontrés sur AdopteUnDev sont des profils qui match avec nos ambitions, c'est extraordinaire.&rdquo;</p>
+									</blockquote>
+								</div>
+
+								<div class="testimonial-item">
+									<div class="d-flex align-items-center mb-4">
+										<div class="photo mr-3">
+											<img src="images/person_1-min.jpg" alt="Image" class="img-fluid">
+										</div>
+										<div class="author">
+											<cite class="d-block mb-0">Kaila Woodland</cite>
+											<span>Owner, Greenland, Inc.</span>
+										</div>
+									</div>
+									<blockquote>
+										<p>&ldquo;Nos collaborateurs rencontrés sur AdopteUnDev sont des profils qui match avec nos ambitions, c'est extraordinaire&rdquo;</p>
+									</blockquote>
+								</div>
+
+								<div class="testimonial-item">
+									<div class="d-flex align-items-center mb-4">
+										<div class="photo mr-3">
+											<img src="images/person_2-min.jpg" alt="Image" class="img-fluid">
+										</div>
+										<div class="author">
+											<cite class="d-block mb-0">Kaila Woodland</cite>
+											<span>Software Engineer.</span>
+										</div>
+									</div>
+									<blockquote>
+										<p>&ldquo;Grâce à AdopteUnDev j'ai rencontré une l'entreprise de mes rêves.&rdquo;</p>
+									</blockquote>
+								</div>
+							</div>
+							<div class="custom-nav-wrap">
+								<a href="#" class="custom-owl-prev">
+									<span class="icon-keyboard_backspace"></span>
+								</a>
+								<a href="#" class="custom-owl-next">
+									<span class="icon-keyboard_backspace"></span>
+								</a>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="site-section bg-light" id="blog-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-7 mb-4 position-relative text-center mx-auto">
+						<h2 class="font-weight-bold text-center">Postes disponibles</h2>
+						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					</div>
+
+				</div>
+				<div class="site-section bg-light" id="blog-section">
+					<div class="container">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-6 col-lg-4 mb-4">
+									<div class="card shadow-sm p-3">
+										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+										<div class="card-body">
+											<h5 class="card-title">Chef de projet SI</h5>
+											<p class="card-text">
+												Stage de 6 mois
+												<br>
+												Nanterre, France
+											</p>
+											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 col-lg-4 mb-4">
+									<div class="card shadow-sm p-3">
+										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+										<div class="card-body">
+											<h5 class="card-title">Software Developer</h5>
+											<p class="card-text">
+												CDI
+												<br>
+												Boulogne-Billancourt, France
+											</p>
+											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 col-lg-4 mb-4">
+									<div class="card shadow-sm p-3">
+										<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" class="card-img-top" alt="Offre Image">
+										<div class="card-body">
+											<h5 class="card-title">Stage Développeur</h5>
+											<p class="card-text">
+												Stage de 4 à 6 mois
+												<br>
+												Courbevoie, France
+											</p>
+											<a href="{{ path('app_detail') }}" class="btn btn-primary btn-sm">Voir l'offre</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row mt-5">
+							<div class="col-lg-4 mx-auto">
+								<a href="{{path('app_infojob')}}" class="btn btn-primary btn-block">Voir plus</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="site-footer text-white">
+			<div class="container">
+				<div class="row justify-content-between">
+					<div class="col-lg-4">
+						<div class="widget">
+							<h3>À propos</h3>
+							<p>AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+						</div>
+						<div class="widget">
+							<h3>Connectez-vous avec nous</h3>
+							<ul class="social list-unstyled">
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-facebook"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-twitter"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-instagram"></span>
+									</a>
+								</li>
+								<li>
+									<a href="{{path('app_offre')}}">
+										<span class="icon-linkedin"></span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="row">
+							<div class="col-12">
+								<div class="widget">
+									<h3>Navigation</h3>
+								</div>
+							</div>
+							<div class="col-6 col-sm-6 col-md-4">
+								<div class="widget">
+									<ul class="links list-unstyled">
+										<li>
+											<a href="{{path('app_offre')}}">Accueil</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Offres</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Matching</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Favoris</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Contact</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="col-6 col-sm-6 col-md-4">
+								<div class="widget">
+									<ul class="links list-unstyled">
+										<li>
+											<a href="{{path('app_offre')}}">À propos de nous</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">FAQ</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Carrières</a>
+										</li>
+										<li>
+											<a href="{{path('app_offre')}}">Support</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</body>
+</html></div><div id="overlayer"></div><div class="loader">
+<div class="spinner-border" role="status">
+	<span class="sr-only">Loading...</span>
+</div></div><script src="js/jquery-3.5.1.min.js"></script><script src="js/jquery-migrate-3.0.0.min.js"></script><script src="js/popper.min.js"></script><script src="js/bootstrap.min.js"></script><script src="js/owl.carousel.min.js"></script><script src="js/aos.js"></script><script src="js/imagesloaded.pkgd.js"></script><script src="js/isotope.pkgd.min.js"></script><script src="js/jquery.animateNumber.min.js"></script><script src="js/jquery.stellar.min.js"></script><script src="js/jquery.waypoints.min.js"></script><script src="js/jquery.fancybox.min.js"></script><script src="js/custom.js"></script></body></html>
