--- a/symfony-project/templates/home/index.html.twig
+++ b/symfony-project/templates/home/index.html.twig
@@ -243,7 +243,7 @@
 				<div class="row">
 					<div class="col-7 mb-4 position-relative text-center mx-auto">
 						<h2 class="font-weight-bold text-center">Postes disponibles</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<p>Découvrez les entreprises à la recherche de talents.</p>
 					</div>
 
 				</div>
